# system-prompts-and-models-of-ai-tools

./: .cursorrules  .gitignore  AGENTS.md  AI_Prompt_Analysis_Report.md  AI_Prompt_Evolution_Diagram.md  Architecture_Pack.md  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  CODEX_INIT_AGENTS_23.09.25.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPLETION_REPORT_OCT_2_2025.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_VERIFICATION.md  EVOLUTION.md  Execution_Matrix.md  Execution_Matrix_v2.md  GPT-5-Condensed-Prompt.md  GPT-5-Frontend-Specialist-Prompt.md  GPT-5-Prompts-README.md  GPT-5-Ultimate-Prompt.md  GitHub_Delivery_Pack.md  HOW_TO_EXTRACT_PROMPTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LOVABLE_CLONE_ADVANCED_FEATURES.md  LOVABLE_CLONE_AI_OPTIMIZATION.md  LOVABLE_CLONE_ARCHITECTURE.md  LOVABLE_CLONE_CODE_TEMPLATES.md  LOVABLE_CLONE_CONFIG_TEMPLATES.md  LOVABLE_CLONE_DEPLOYMENT_GUIDE.md  LOVABLE_CLONE_FRONTEND_TEMPLATES.md  LOVABLE_CLONE_GITHUB_PRICING.md  LOVABLE_CLONE_NEXTJS_SUPABASE.md  LOVABLE_CLONE_NEXTJS_SUPABASE_PART2.md  (+60 more)
.claude/: settings.json
personal-brand-engine/: .env.example  .gitignore  Makefile  README.md  README_AR.md  docker-compose.yml  pyproject.toml  requirements.txt
personal-brand-engine/agents/: __init__.py  base_agent.py
personal-brand-engine/api/: main.py
personal-brand-engine/config/: brand_profile.yaml  content_strategy.yaml  schedule.yaml  settings.py
personal-brand-engine/docker/: Dockerfile  supervisord.conf
personal-brand-engine/generated_cvs/: Sami_Assiri_CV_2026.html
(+1791 files in other folders)
